--- a/Client/src/components/admin/Login/login.css
+++ b/Client/src/components/admin/Login/login.css
@@ -1,35 +1,111 @@
-body{
-    background: #bdc3c7;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #2c3e50, #bdc3c7);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #2c3e50, #bdc3c7); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-}
-
-.form{
-    background-color: white;
-    border-radius: 5px;
-    width: 550px;
-    margin: 20px auto;
-    padding: 20px;
-    /* height: 600px; */
-}
-
-.form-body{
-    text-align: left;
-    padding: 20px 10px;
-}
-
-.form-body > *{
-    padding: 5px;
-}
-
-.form__label{
-    width: 40%;
-}
-
-.form_input{
-    width: 60%;
-}
-
-.footer{
+body {
+    padding: 50px;
+    font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  }
+  
+  
+  @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@700&family=Poppins:wght@400;500;600&display=swap');
+  
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Poppins", sans-serif;
+  }
+  
+  body {
+    margin: 0;
+    padding: 0;
+  }
+  
+  .center1 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+   background-color: #fff;;
+    border-radius: 10px;
+    box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.05);
+  }
+  
+  .center1 h1 {
     text-align: center;
-}
+    padding: 20px 0;
+    font-weight: 500;
+    color: #000240;
+  }
+  
+  .center1 form {
+    padding: 0 40px;
+    box-sizing: border-box;
+  }
+  
+  form .txt_field1 {
+    position: relative;
+    background-color: #E8F5FF;
+    border-radius: 10px;
+    height: 50px;
+    margin: 25px 0;
+  }
+  
+  .txt_field1 input {
+    width: 100%;
+    padding: 5px 5px;
+    height: 40px;
+    font-size: 16px;
+    border: none;
+    background: none;
+    outline: none;
+  }
+  .txt_field1 textarea {
+    width: 100%;
+    padding: 5px 5px;
+    height: 40px;
+    font-size: 16px;
+    border: none;
+    background: none;
+    outline: none;
+  }
+  
+  .txt_field1 label {
+    position: absolute;
+    top: 50%;
+    left: 5px;
+    color: #b5b6cb;
+    transform: translateY(-50%);
+    font-size: 16px;
+    pointer-events: none;
+    transition: .5s;
+  }
+  
+  .txt_field1 span::before {
+    content: '';
+    position: absolute;
+    top: 40px;
+    left: 0;
+    width: 0%;
+    height: 2px;
+    background: #2691d9;
+    transition: .5s;
+  }
+  
+  .txt_field1 input:focus~label,
+  .txt_field1 input:valid~label {
+    top: -10px;
+    color:  rgb(30 58 138);
+  }
+  .txt_field1 textarea:focus~label,
+  .txt_field1 textarea:valid~label {
+    top: -10px;
+    color:  rgb(30 58 138);
+  }
+  .txt_field1 input:focus~span::before,
+  .txt_field1 input:valid~span::before {
+    width: 100%;
+  }
+  .txt_field1 textarea:focus~span::before,
+  .txt_field1 textarea:valid~span::before {
+    width: 100%;
+  }
+
+  
