--- a/Client/src/components/user/Hero/hero.css
+++ b/Client/src/components/user/Hero/hero.css
@@ -24,7 +24,7 @@
     width: 70%;
 }
 
-.hero-text input {
+.hero-text button {
     display: inline-block;
     padding: 7px 40px;
     background-color: #000000;
